--- a/_data/en/settings.yml
+++ b/_data/en/settings.yml
@@ -58,6 +58,7 @@ contact_page:
       'DOT National Registry of Certified Medical Examiners': DOT National Registry of Certified Medical Examiners
       'Environmental Protection Agency': Environmental Protection Agency
       'FDIC Resolution Request Management Portal': FDIC Resolution Request Management Portal
+      'Federal Reserve Board (FRB)': Federal Reserve Board (FRB)
       'FEMA Disaster Assistance': FEMA Disaster Assistance
       'General Services Administration': General Services Administration
       'Get.gov': Get.gov
