--- a/_data/es/settings.yml
+++ b/_data/es/settings.yml
@@ -59,6 +59,7 @@ contact_page:
       'DOT National Registry of Certified Medical Examiners': Registro Nacional de Médicos Forenses Certificados del DOT
       'Environmental Protection Agency': Agencia de Protección Ambiental
       'FDIC Resolution Request Management Portal': Portal de gestión de solicitudes de resolución de FDIC
+      'Federal Reserve Board (FRB)': Junta de la Reserva Federal (FRB)
       'FEMA Disaster Assistance': Asistencia por catástrofe de FEMA
       'General Services Administration': Administración General de Servicios
       'Get.gov': Get.gov
