--- a/_data/fr/settings.yml
+++ b/_data/fr/settings.yml
@@ -62,6 +62,7 @@ contact_page:
       'DOT National Registry of Certified Medical Examiners': Registre national des médecins légistes agréés du DOT
       'Environmental Protection Agency': Agence de protection de l’environnement
       'FDIC Resolution Request Management Portal': Portail de gestion des demandes de résolution de la FDIC
+      'Federal Reserve Board (FRB)': Conseil des gouverneurs de la Réserve fédérale (FRB)
       'FEMA Disaster Assistance': Aide de la FEMA en cas de catastrophe
       'General Services Administration': Administration des services généraux
       'Get.gov': Get.gov
