--- a/_data/zh/settings.yml
+++ b/_data/zh/settings.yml
@@ -56,6 +56,7 @@ contact_page:
       'DOT National Registry of Certified Medical Examiners': 交通部认证的医学检验官注册簿
       'Environmental Protection Agency': 国家环境保护局
       'FDIC Resolution Request Management Portal': FDIC（联邦存款保险公司）解决方案请求管理门户
+      'Federal Reserve Board (FRB)': 美国联邦储备委员会（FRB）
       'FEMA Disaster Assistance': FEMA （联邦紧急事务管理局）灾难救助
       'General Services Administration': 联邦总务管理局
       'Get.gov': Get.gov
