Add continue on error

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -154,6 +154,7 @@ jobs:
       - run:
           name: Run htmlproofer (external links only)
           command: bundle exec scripts/htmlproofer --external --retry-external 3 --retry-external-delay 8 --url-ignore congress.gov --url-ignore lastpass.com --url-ignore zendesk.login.gov --url-ignore https://secure.login.gov/zh
+          continue-on-error: true
       - slack/status:
           fail_only: true
           failure_message: ':login-gov::red_circle: external link check failed'
