--- a/admin/config.yml
+++ b/admin/config.yml
@@ -3,8 +3,7 @@
 backend:
   name: github
   repo: GSA-TTS/identity-site
-  # TODO: Note, staging override !
-  branch: LG-13755-program-updates
+  branch: main
   base_url: https://pages.cloud.gov
   auth_endpoint: external/auth/github
   preview_context: pages/build
