--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -146,6 +146,7 @@ jobs:
   test-external-links:
     docker:
       - image: cimg/ruby:3.1-node
+    parallelism: 1
     steps:
       - checkout
       - install-dependencies
