Revert "Reset config"
This reverts commit 56d7af7f870a00e87d406950afd9117b8ac80c09.

--- a/admin/config.yml
+++ b/admin/config.yml
@@ -3,7 +3,8 @@
 backend:
   name: github
   repo: GSA-TTS/identity-site
-  branch: main
+  # TODO: Note, staging override !
+  branch: LG-13755-program-updates
   base_url: https://pages.cloud.gov
   auth_endpoint: external/auth/github
   preview_context: pages/build
