--- a/_data/language_map.yml
+++ b/_data/language_map.yml
@@ -1,5 +1,5 @@
 languages:
-  en: "English"
-  es: "Spanish"
-  fr: "French"
-  zh: "Simplified Chinese"
+  en: 'English'
+  es: 'Spanish'
+  fr: 'French'
+  zh: 'Simplified Chinese'
