make normalize-yaml

--- a/_data/es/contact.yml
+++ b/_data/es/contact.yml
@@ -1,14 +1,3 @@
-intro_content: >-
-  ## Póngase en contacto
-
-  * Contacte con la agencia gubernamental para que le ayude con el estado de su solicitud, membresía, cumplimiento de requisitos, beneficios u otros asuntos relacionados con su cuenta en esa agencia. La información de contacto se encuentra en el sitio web de la agencia.
-
-
-  * Login.gov solo puede solucionar problemas relacionados con el inicio de sesión.
-
-
-  * Login.gov no puede crear, eliminar o administrar su cuenta por usted, ni iniciar sesión en esa cuenta.
-
 help_center_content: >-
   ## Busque respuesta a las preguntas más frecuentes
 
@@ -20,18 +9,32 @@ help_center_content: >-
   * [Necesito cambiar mi información o administrar mi cuenta](/es/help/manage-your-account/overview/)
 
   * [Ver más artículos de ayuda](/es/help/)
-maintenance_window_content: El centro de ayuda de Login.gov estará en mantenimiento de <strong>%{start_time} a %{end_time}</strong>. Consulte los temas comunes siguientes para obtener ayuda.
-phone_available_content: Puede llamar a nuestro centro de ayuda en cualquier momento al (844)&nbsp;875-6446.
-unplanned_outage_content: Debido a un problema técnico, no podemos revisar las solicitudes de ayuda en línea.
+intro_content: >-
+  ## Póngase en contacto
+
+  * Contacte con la agencia gubernamental para que le ayude con el estado de su solicitud, membresía, cumplimiento de requisitos, beneficios u otros asuntos relacionados con su cuenta en esa agencia. La información de contacto se encuentra en el sitio web de la agencia.
+
+
+  * Login.gov solo puede solucionar problemas relacionados con el inicio de sesión.
+
+
+  * Login.gov no puede crear, eliminar o administrar su cuenta por usted, ni iniciar sesión en esa cuenta.
+maintenance_window_content: El centro de ayuda de Login.gov estará en
+  mantenimiento de <strong>%{start_time} a %{end_time}</strong>. Consulte los
+  temas comunes siguientes para obtener ayuda.
 partner_content: >-
   ## Asóciese con Login.gov
 
   ¿Está interesado en usar Login.gov en su agencia? [Visite el sitio web de nuestros asociados](/partners/) o [contacte con nosotros](/partners/business-inquiries/).
+phone_available_content: Puede llamar a nuestro centro de ayuda en cualquier
+  momento al (844)&nbsp;875-6446.
 
 report_issue_content: >-
   ## Informe de un problema de seguridad
 
-  Para informar de una vulnerabilidad de seguridad, lea la [política de divulgación de vulnerabilidades](https://www.gsa.gov/vulnerability-disclosure-policy) y presente su informe por medio del [Bug Bounty Program de la GSA](https://hackerone.com/gsa_bbp){:class="usa-link--external"}.
+  Para informar de una vulnerabilidad de seguridad, lea la [política de divulgación de vulnerabilidades](https://www.gsa.gov/vulnerability-disclosure-policy) y presente su informe por medio del [Bug Bounty Program de la GSA](https://hackerone.com/gsa_bbp){:class=“usa-link--external”}.
 
 
-  [Contáctenos](https://forms.gle/uj8NwiaDrieVHa466){:class="usa-link--external"} para informar de una sospecha de phishing en el sitio de Login.gov o de un asociado.
+  [Contáctenos](https://forms.gle/uj8NwiaDrieVHa466){:class=“usa-link--external”} para informar de una sospecha de phishing en el sitio de Login.gov o de un asociado.
+unplanned_outage_content: Debido a un problema técnico, no podemos revisar las
+  solicitudes de ayuda en línea.
