--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^5.48.2",
     "@typescript-eslint/parser": "^5.48.2",
+    "esbuild": "^0.25.0",
     "esbuild-esm-loader": "^0.3.1",
     "eslint": "^8.31.0",
     "eslint-plugin-import": "^2.26.0",
