--- a/_data/es/settings.yml
+++ b/_data/es/settings.yml
@@ -36,6 +36,8 @@ contact_page:
   required: obligatorio
   support_request_form:
     agencies:
+      'BENEFEDS': Sistema BENEFEDS
+      'Bureau of Indian Affairs': Oficina de Asuntos Indígenas
       'Central Intelligence Agency': Agencia Central de Inteligencia
       'Consumer Financial Protection Bureau': Oficina para la Protección Financiera del Consumidor
       'Customs and Border Protection Jobs': Oficina de Aduanas y Protección Fronteriza, Empleos
@@ -69,6 +71,7 @@ contact_page:
       'HHS National Institutes of Health (NIH)': Institutos Nacionales de la Salud (NIH) de HHS
       'Housing and Urban Development': Vivienda y Desarrollo Urbano
       'Internal Revenue Service (IRS)': Servicio de Impuestos Internos (IRS)
+      'LTCFEDS': Programa LTCFEDS
       'Library of Congress': Biblioteca del Congreso
       'MyTravelGov': MyTravelGov del Departamento de Estado
       'myTreasury': myTreasury
@@ -96,6 +99,8 @@ contact_page:
       'State of Maryland': Estado de Maryland
       'Trusted Traveler Programs (Global Entry/Nexus/Sentri)': Programas para viajeros de confianza (Global Entry/Nexus/Sentri)
       'U.S. Agency for International Development': Agencia de Estados Unidos para el Desarrollo Internacional
+      'U.S. Citizenship and Immigration Services (USCIS) - E-Verify': 'Servicio de Ciudadanía e Inmigración de los EE. UU. (USCIS): Verificación electrónica'
+      'U.S. Citizenship and Immigration Services (USCIS) - SAVE ': 'Servicio de Ciudadanía e Inmigración de los EE. UU. (USCIS): Guardar'
       'U.S. Department of Agriculture': Departamento de Agricultura de Estados Unidos
       'U.S. International Trade Commission': Comisión de Comercio Internacional de los Estados Unidos
       'United States Forest Service': Servicio Forestal de Estados Unidos
