--- a/_data/en/settings.yml
+++ b/_data/en/settings.yml
@@ -66,6 +66,7 @@ contact_page:
       'Health and Human Services': Health and Human Services
       'HHS Grants.gov': HHS Grants.gov
       'HHS National Institutes of Health (NIH)': HHS National Institues of Health (NIH)
+      'Homeland Security Information Network (HSIN)': Homeland Security Information Network (HSIN)
       'Housing and Urban Development': Housing and Urban Development
       'Internal Revenue Service (IRS)': Internal Revenue Service (IRS)
       'Library of Congress': Library of Congress
@@ -95,6 +96,7 @@ contact_page:
       'State of Maryland': State of Maryland
       'Trusted Traveler Programs (Global Entry/Nexus/Sentri)': Trusted Traveler Programs (Global Entry/Nexus/Sentri)
       'U.S. Agency for International Development': U.S. Agency for International Development
+      'U.S. Citizenship and Immigration Services (USCIS) - myAccount': U.S. Citizenship and Immigration Services (USCIS) - myAccount
       'U.S. Department of Agriculture': U.S. Department of Agriculture
       'U.S. International Trade Commission': U.S. International Trade Commission
       'United States Forest Service': United States Forest Services
