--- a/_data/es/settings.yml
+++ b/_data/es/settings.yml
@@ -67,6 +67,7 @@ contact_page:
       'Health and Human Services': Salud y Servicios Humanos
       'HHS Grants.gov': Grants.gov de HHS
       'HHS National Institutes of Health (NIH)': Institutos Nacionales de la Salud (NIH) de HHS
+      'Homeland Security Information Network (HSIN)': Red de Información de Seguridad Nacional (HSIN)
       'Housing and Urban Development': Vivienda y Desarrollo Urbano
       'Internal Revenue Service (IRS)': Servicio de Impuestos Internos (IRS)
       'Library of Congress': Biblioteca del Congreso
@@ -96,6 +97,7 @@ contact_page:
       'State of Maryland': Estado de Maryland
       'Trusted Traveler Programs (Global Entry/Nexus/Sentri)': Programas para viajeros de confianza (Global Entry/Nexus/Sentri)
       'U.S. Agency for International Development': Agencia de Estados Unidos para el Desarrollo Internacional
+      'U.S. Citizenship and Immigration Services (USCIS) - myAccount': 'Servicio de Ciudadanía e Inmigración de los EE. UU. (USCIS): Mi cuenta'
       'U.S. Department of Agriculture': Departamento de Agricultura de Estados Unidos
       'U.S. International Trade Commission': Comisión de Comercio Internacional de los Estados Unidos
       'United States Forest Service': Servicio Forestal de Estados Unidos
