--- a/_data/zh/settings.yml
+++ b/_data/zh/settings.yml
@@ -64,6 +64,7 @@ contact_page:
       'Health and Human Services': 卫生与公众服务
       'HHS Grants.gov': HHS（卫生与公众服务部） Grants.gov
       'HHS National Institutes of Health (NIH)': HHS（卫生与公众服务部）国立卫生研究院（NIH）
+      'Homeland Security Information Network (HSIN)': 国土安全信息网络 (HSIN)
       'Housing and Urban Development': 住房与城市发展
       'Internal Revenue Service (IRS)': 国家税务局（IRS）
       'Library of Congress': 国会图书馆
@@ -93,6 +94,7 @@ contact_page:
       'State of Maryland': 马里兰州
       'Trusted Traveler Programs (Global Entry/Nexus/Sentri)': 受信任旅客计划（Global Entry/Nexus/Sentri)
       'U.S. Agency for International Development': 美国国际开发署
+      'U.S. Citizenship and Immigration Services (USCIS) - myAccount': 美国公民及移民服务局 (USCIS) - myAccount
       'U.S. Department of Agriculture': 美国农业部
       'U.S. International Trade Commission': 美国国际贸易委员会
       'United States Forest Service': 美国国家森林局
